Accessibility: Larger font sizes and higher contrast link color - Increase contrast of body link color to WCAG AAA level on white (fix #54) - Increase size of text on docs page (fix #18) - Adjust font sizes to address small font and layout inconsistencies between pages (side-effects from flatdoc CSS)

--- a/_sass/_docs.scss
+++ b/_sass/_docs.scss
@@ -1,9 +1,11 @@
 .content-root {
+  font-size: 1.1rem;
+  color: $text-color;
   padding-top: 4em;
 
   div.menubar.fixed {
     will-change: transform;
-    padding-top: 4em;
+    padding-top: 75px;
   }
   
   .content h2 {
